aws-tkg1-4-packages/wkld-cluster/overlays/argocd/argocd-dependencies.yaml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server-http
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: #@ "argocd.{}".format(data.values.ingress.domain)
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
  tls:
    - hosts:
        - #@ "argocd.{}".format(data.values.ingress.domain)
      secretName: #@ "{}/{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server-cli
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: #@ "argocd-cli.{}".format(data.values.ingress.domain)
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
  tls:
    - hosts:
        - #@ "argocd-cli.{}".format(data.values.ingress.domain)
      secretName: #@ "{}/{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)

#@ if data.values.psp.cluster_role:
